# dryresume

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt  result_obj.json  submit.sh
builders/: Dockerfile
dryresume/: __init__.py  data_manager.py  resume.py
dryresume/templates/: resume.html
dryresume/templates/resumeCSS/: resume.css
resume-automator/: data_manager.py
resume_automator/: data_manager.py
samples/input/json/: README.md  george_resume.json  george_resume_baseball.json  george_resume_tv.json
samples/input/yaml/: george_resume.yaml  george_resume_baseball.yaml  george_resume_tv.yaml
samples/results/json/: george_resume.json  george_resume_baseball.json  george_resume_tv.json
samples/results/yaml/: george_resume.yaml  george_resume_baseball.yaml  george_resume_tv.yaml
tests/: test_integration.py  test_unit.py
tests/sample_json/: george_resume.json  george_resume_tv.json
tests/test_files/: generic-base.json  industry-specific.json
