[tool.poetry]
name = "resume-automator"
version = "0.1.0"
description = ""
authors = ["tflanigan <tflanig1@gmail.com>"]
readme = "README.md"
packages = [{include = "resume_automator"}]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
jsonpatch = "^1.32"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
pyfakefs = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
