[tool.poetry]
name = "dryresume"
version = "0.1.0"
description = "YAML/JSON to html resume generator for different resume versions"
authors = ["Thomas Flanigan <tflanig1@gmail.com>"]
readme = "README.md"
packages = [{include = "dryresume"}]
repository = "https://github.com/exvertus/dryresume"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
jsonpatch = "^1.32"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
pyfakefs = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
